--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/core": "^1.1.16",
+    "@langchain/openai": "^1.2.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "langchain": "^1.2.12"
   },
   "type": "module",
   "devDependencies": {
