--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@huggingface/transformers": "^3.8.1",
+    "@langchain/community": "^1.1.7",
     "@langchain/core": "^1.1.16",
     "@langchain/openai": "^1.2.3",
+    "@langchain/textsplitters": "^1.0.1",
+    "chromadb": "^3.2.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
