--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,10 @@
     "@langchain/textsplitters": "^1.0.1",
     "chromadb": "^3.2.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "langchain": "^1.2.12"
+    "langchain": "^1.2.14"
   },
   "type": "module",
   "devDependencies": {
