build new chat router to handle top-level rag workflow

--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,10 @@
     "chromadb": "^3.2.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.2.4",
     "express": "^5.2.1",
-    "langchain": "^1.2.14"
+    "langchain": "^1.2.14",
+    "zod": "^4.3.6"
   },
   "type": "module",
   "devDependencies": {
